argo/argocd/application/patch.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        command:
        - argocd-server
        - --insecure
        - --disable-auth
        - --staticassets
        - /shared/app
